<resources>
    <string name="app_name">Tugas 20</string>
    <string name="mentor">MENTOR</string>
    <string name="english_course">ENGLISH COURSE</string>
    <string name="tambah_mentor">Tambah Mentor</string>
    <string name="edit_mentors">Edit</string>
    <string name="delete_mentors">Delete</string>
    <string name="button_kembali">Button Kembali</string>
    <string name="button_back">Button Back</string>
    <string name="signup">Sign Up</string>
    <string name="create_account"><font color="#00ff00">Create Account</font></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">SignIn</string>
    <string name="username">Username</string>
    <string name="full_name">Full Name</string>
    <string name="address">Address</string>
    <string name="number_phone">Number Phone</string>
    <string name="register">SignUp</string>
    <string name="back_to_login">I have account, Login</string>
    <string name="logo">LOGO</string>
    <string name="lanjutkan">Continue</string>
    <string name="go_register">I don\'t have account yet. Register</string>
    <string name="upload_image">Upload Profile</string>
    <string name="profession">Profession</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="simpan_lanjutkan"><![CDATA[Simpan & Lanjutkan]]></string>
    <string name="lewati_perkenalan">Skip</string>
</resources>